2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Box.wrl: 

2012-12-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* index.wrl:
	* vrml.html:
	* menu.html:
	* preview.gif:
	* info.html:
	* m-info.gif:
	* t-miet.gif:
	* info2.html:
	* title.html:
	* t-vrml.gif:
	* t-info.gif:
	* p-info.gif:
	* p-miet.gif:
	* p-vrml.gif:
	* m-miet.gif:
	* start.html:
	* m-vrml.gif:
	* a-miet.gif:
	* empty.html:
	* i-info.gif:
	* bic-bg.gif:
	* a-vrml.gif:
	* index.wrl:
	* a-info.gif:
	* i-vrml.gif:
	* index.html:
	* i-miet.gif:
	* mspace1.gif:
	* mspace2.gif:
	* p-start.gif:
	* p-press.gif:
	* mieter.html:
	* i-press.gif:
	* m-empty.gif:
	* i-start.gif:
	* bictext.gif:
	* oak.png:
	* m-start.gif:
	* m-press.gif:
	* vrml-i.html:
	* t-firma.gif:
	* bicfoto.gif:
	* vrml-m.html:
	* v-buero.gif:
	* a-start.gif:
	* a-press.gif:
	* vrml-o.html:
	* presse.html:
	* ic-press.gif:
	* vm-buero.gif:
	* vrml-of.html:
	* m.wrl:
	* index.wrl:
	* preview.gif:
	* wooly.bw:
	* vrml-sm.html:
	* logo.png:
	* tech.jpg:
	* presse2.html:
	* presse1.html:
	* presse6.html:
	* presse5.html:
	* bett.wrl:
	* presse4.html:
	* presse3.html:
	* cube.wrl:
	* hose.png:
	* infoterm.gif:
	* hose.wrl:
	* start-t.html:
	* t-presse.gif:
	* a3.wrl:
	* a2.wrl:
	* a1.wrl:
	* jacke.png:
	* index.wrl:
	* htext.png:
	* kippe.png:
	* oak_2.png:
	* bomfl.png:
	* kippe.wrl:
	* start-lf.html:
	* m6.wrl:
	* v-spazier.gif:
	* m2.wrl:
	* m3.wrl:
	* m4.wrl:
	* terminal.html:
	* m5.wrl:
	* c3.wrl:
	* c2.wrl:
	* c4.wrl:
	* presse-m.html:
	* mieter-m.html:
	* m1.wrl:
	* c1.wrl:
	* presse-s.html:
	* hosen3.png:
	* hosen4.png:
	* hosen1.png:
	* hosen2.png:
	* dth1-2.png:
	* dth1-1.png:
	* mieter-la.html:
	* dth1-3.png:
	* v-rundflug.gif:
	* holz05.png:
	* dth1-4.png:
	* shirt3.png:
	* shirt3.wrl:
	* shirt2.png:
	* shirt2.wrl:
	* zimmer.wrl:
	* hud.wrl:
	* tv-lsp.png:
	* zimmer.png:
	* shirt1.wrl:
	* top.png:
	* ok.aiff:
	* index.html:
	* vm-spazier.gif:
	* rabbit.jpg:
	* shirt1.png:
	* light6.png:
	* oak__2.png: