@@ -2,175 +2,9 @@
 
 META "title" "Text test"
 
-PROTO LineRectangle2D [ ]
-{
-  IndexedLineSet {
-    coordIndex [ 0, 1, 2, 3, 0, -1 ]
-    coord Coordinate {
-      point [ -0.5 -0.5 0, 0.5 -0.5 0, 0.5 0.5 0, -0.5 0.5 0 ]
-    }
-  }
-}
-
-PROTO BBox2 [
-  exposedField SFVec3f translation 0 0 0
-  exposedField SFVec3f scale 1 1 1
-  exposedField SFColor color 1 1 1
-]
-{
-  Transform {
-    translation IS translation
-    scale IS scale
-    children Transform {
-      translation 0.5 -0.5 0
-      children Shape {
-        appearance Appearance {
-          material Material {
-            emissiveColor IS color
-          }
-        }
-        geometry LineRectangle2D { }
-      }
-    }
-  }
-}
-
-Viewpoint {
-  position 0 -0.0839844 21.8746
-  centerOfRotation 0 -0.0839844 0
-}
-
 DEF Lines Shape {
-  appearance Appearance {
-    material Material {
-      diffuseColor 1 0 0
-    }
-  }
   geometry DEF Text Text {
     string [ "Hällö Wörld!", "This is my line!", "now a new one." ]
     length [ 12, 0, 10 ]
-    fontStyle FontStyle {
-      family "Ubuntu Mono"
-      style "BOLDITALIC"
-      justify [ "BEGIN", "BEGIN" ]
-    }
   }
 }
-
-DEF RedBox Transform {
-  translation -0.5 0.5 0
-  children Shape {
-    appearance Appearance {
-      material Material {
-        diffuseColor 1 0 0
-      }
-    }
-    geometry Box {
-      size 1 1 1
-    }
-  }
-}
-
-DEF GreenBox Transform {
-  translation -0.5 -0.5 0
-  children Shape {
-    appearance Appearance {
-      material Material {
-        diffuseColor 0 1 0
-      }
-    }
-    geometry Box {
-      size 1 1 1
-    }
-  }
-}
-
-DEF BlueBox Transform {
-  translation -0.5 -1.5 0
-  children Shape {
-    appearance Appearance {
-      material Material {
-        diffuseColor 0 0 1
-      }
-    }
-    geometry Box {
-      size 1 1 1
-    }
-  }
-}
-
-DEF YellowBox Transform {
-  translation 6 1.5 0
-  scale 12 1 1
-  children Shape {
-    appearance Appearance {
-      material Material {
-        diffuseColor 1 1 0
-      }
-    }
-    geometry Box {
-      size 1 1 1
-    }
-  }
-}
-
-DEF LineBounds Transform { }
-
-DEF TextBounds Transform {
-  children BBox2 { }
-}
-
-DEF Bounds Script {
-  eventIn  MFVec2f set_lineBounds
-  eventIn  SFVec2f set_textBounds
-  eventOut SFVec3f scale_changed
-  field    SFNode  lineBounds USE LineBounds
-  field    MFColor color [ 1 0 0, 0 1 0, 0 0 1 ]
-  field    SFNode  text USE Text
-
-  url "vrmlscript:
-
-function get_majorAlignment (index)
-{
-	if (text .fontStyle .justify [0] == 'END')
-		return text .textBounds .x - text .lineBounds [index] .x;
-		
-	if (text .fontStyle .justify [0] == 'MIDDLE')
-		return (text .textBounds .x - text .lineBounds [index] .x) / 2;
-		
-	return 0;
-}
-
-function set_lineBounds (value, time)
-{
-	var transforms = new MFNode ();
-	
-	var y = 0;
-		
-	for (var i in value)
-	{
-		var transform = Browser .currentScene .createProto ('BBox2');
-		
-		transform .translation = new SFVec3f (get_majorAlignment (i), y, 0);
-		transform .scale       = new SFVec3f (value [i] .x, value [i] .y, 1);
-		transform .color       = color [i % color .length];
-
-		transforms [transforms .length] = transform;
-	
-		y += -value [i] .y ;
-	}
-
-	lineBounds .children = transforms;
-}
-
-function set_textBounds (value, time)
-{
-	scale_changed = new SFVec3f (value .x, value .y, 1);
-}
-  "
-}
-
-ROUTE Text.origin TO LineBounds.set_translation
-ROUTE Text.lineBounds TO Bounds.set_lineBounds
-ROUTE Text.textBounds TO Bounds.set_textBounds
-ROUTE Bounds.scale_changed TO TextBounds.set_scale
