@@ -312,6 +312,12 @@ Text::display ()
 void
 Text::dispose ()
 {
+	__LOG__ << std::endl;
+
+	font .reset (NULL);
+
+	__LOG__ << std::endl;
+	
 	X3DGeometryNode::dispose ();
 }
 
