@@ -1,5 +1,12 @@
 2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Library.mdproj:
+	* test.wrl:
+	* Text.wrl:
+	* Add&RemoveChildren.wrl: 
+
+2012-12-17  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Box.wrl: 
 
 2012-12-15  Holger Seelig  <holger.seelig@yahoo.de>
